--- a/Components/Hexagon/Hexagon.css
+++ b/Components/Hexagon/Hexagon.css
@@ -6,12 +6,14 @@
 
 .hexagon-cat {
   position: absolute;
-  left: 16px;
-  top: 16px;
+  left: 5px;
+  top: -12px;
+  z-index: 2;
 }
 
 .hexagon-rock {
   position: absolute;
   left: 10px;
-  top: 20px;
+  top: 0px;
+  z-index:1;
 }
