--- a/index.css
+++ b/index.css
@@ -1,55 +1,98 @@
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #282c34;
-  }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
-  .App {
-    text-align: center;
-  }
-  
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  
-  .App-link {
-    color: #61dafb;
-  }
-  
-  input[type=number] {
-    font-size: calc(10px + 2vmin);
-    width: 4em;
-  }
-  
-  button {
-    font-size: calc(10px + 2vmin);
-  }
-  
-  textarea {
-    font-size: calc(10px + 2vmin);
-  }
-  
-  .ContractInfo {
-    font-size: calc(10px + 1vmin);
-    text-align: left;
-    width: 90vw;
-    height: 7em;
-    padding: 2vw;
-    overflow-x: scroll;
-    white-space: pre;
-  }
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.App {
+  text-align: center;
+}
+
+.App-header {
+  background-color: #ffffff;
+  /*background-image: url(./coolHexes.jpg);*/
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: rgb(0, 0, 0);
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+input[type=number] {
+  font-size: calc(10px + 1vmin);
+  width: 2em;
+  color: rgb(0, 0, 0);
+padding: 15px 16px;
+text-align: left;
+text-decoration: none;
+display: inline-block;
+cursor: pointer;
+border-radius: 4px;
+border: 3px solid black;
+
+}
+
+button {
+  background-color: #ffffff; /* Green */
+color: rgb(0, 0, 0);
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: calc(10px + 1vmin);
+margin: 4px 2px;
+cursor: pointer;
+border-radius: 4px;
+border: 3px solid black;
+}
+button:hover{
+  background-color: rgb(197, 197, 197);
+}
+button:active{
+  background-color: rgb(46, 45, 45);
+}
+
+
+textarea {
+  font-size: calc(10px + 2vmin);
+}
+h1{
+  font-size: 100;
+  font-weight: 800;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+h2{
+  font-size: 40;
+  font-family: 'Courier New', Courier, monospace;
+  text-align: left;
+}
+h3{
+  font-size: 30;
+  text-align: left;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.ContractInfo {
+  font-size: calc(10px + 1vmin);
+  text-align: left;
+  width: 90vw;
+  height: 7em;
+  padding: 2vw;
+  overflow-x: scroll;
+  white-space: pre;
+}
